# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

# see https://github.com/pypa/setuptools_scm/#pyprojecttoml-usage
[tool.setuptools_scm]

[tool.black]
line-length = 130
target_version = ["py38"]
include = '\.pyi?$'
extend-exclude = ''''''

[tool.isort]
profile = "black"
line_length = 130
