[metadata]
name = removebg-core

description_file =
    README.md
description = remove.bg Core Package

author = David Fankhauser
author_email = david@kaleido.ai

maintainer = David Fankhauser
maintainer_email = david@kaleido.ai

home_page = https://github.com/remove-bg/kaleido-removebg

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

keywords =
    kaleido
    ml
    training
    core
    removebg

[options]
zip_safe = False
include_package_data = True
package_dir =
    =core
packages = find:
install_requires =
    wheel
    kaleido-core>=1.3.10
    shadowgen-core<2.0.0
    torch>=1.8.0
    torchvision>=0.9.0
    numpy>=1.17,<1.22.0
    opencv-python>=4.1,<5.0.0
    wandb<0.12
    pika>=1.0.0,<2.0.0
    msgpack<1.0.0
    pandas<1.4.0
    nibabel<2.5.0,>=2.4.0
    pillow>=7.2.0,<9.0.0
scripts =
    core/bin/removebg-demo.py
    core/bin/removebg-server.py
    core/bin/removebg-train-trimap.py

[options.package_data]
* = *.md, *.txt

[options.packages.find]
where=core

[files]
packages =
    removebg

[bdist_wheel]
universal = False
