[metadata]
name = removebg-core

description-file =
    README.md
description = remove.bg Core Package

author = David Fankhauser
author_email = david@kaleido.ai

maintainer = David Fankhauser
maintainer-email = david@kaleido.ai

home-page = https://github.com/remove-bg/kaleido-core-removebg

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

keywords =
    kaleido
    ml
    training
    core
    removebg

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    wheel
    setuptools
scripts =
    bin/removebg-demo.py
    bin/removebg-server.py
    bin/removebg-train-trimap.py

[options.package_data]
* = *.md, *.txt

[files]
packages =
    removebg

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = False
